--- a/index.html
+++ b/index.html
@@ -92,8 +92,6 @@
             <h2 class="section-title">Королевское меню</h2>
             <div class="menu-categories">
                 <div class="category active" data-category="hot">Горячие блюда</div>
-                <div class="category" data-category="cold">Закуски</div>
-                <div class="category" data-category="drinks">Напитки</div>
             </div>
             
             <div class="menu-items">
@@ -125,7 +123,7 @@
                 </div>
                 
                 <div class="menu-item">
-                    <img src="https://avatars.mds.yandex.net/i?id=034215f2c0e1cc54f060a241154e37abd21c5a70-10752752-images-thumbs&n=13>
+                    <img src="https://avatars.mds.yandex.net/i?id=034215f2c0e1cc54f060a241154e37abd21c5a70-10752752-images-thumbs&n=13">
                     <div class="item-content">
                         <h3>Пирог с дичью и грибами</h3>
                         <p>Открытый пирог с мясом фазана, грибами и луком по старинному английскому рецепту</p>
