--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <tr><td>17</td><td>Просин В.</td><td class="vote-cell">+</td></tr>
                     <tr><td>18</td><td>Пятова Д.</td><td class="vote-cell"></td></tr>
                     <tr><td>19</td><td>Рукавишникова В.</td><td class="vote-cell">+</td></tr>
-                    <tr><td>20</td><td>Савельев Е.</td><td class="vote-cell"></td></tr>
+                    <tr><td>20</td><td>Савельев Е.</td><td class="vote-cell">+</td></tr>
                     <tr><td>21</td><td>Соколов А.</td><td class="vote-cell">+</td></tr>
                     <tr><td>22</td><td>Трушенков М.</td><td class="vote-cell"></td></tr>
                     <tr><td>23</td><td>Фадина Л.</td><td class="vote-cell"></td></tr>
