--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <tr><td>10</td><td>Масленикова Н.</td><td class="vote-cell"></td></tr>
                     <tr><td>11</td><td>Новоженов М.</td><td class="vote-cell">+</td></tr>
                     <tr><td>12</td><td>Ольнева С.</td><td class="vote-cell"></td></tr>
-                    <tr><td>13</td><td>Охотников В.</td><td class="vote-cell"></td></tr>
+                    <tr><td>13</td><td>Охотников В.</td><td class="vote-cell">+</td></tr>
                     <tr><td>14</td><td>Полудкина А.</td><td class="vote-cell">+</td></tr>
                     <tr><td>15</td><td>Поляков М.</td><td class="vote-cell"></td></tr>
                     <tr><td>16</td><td>Полякова М.</td><td class="vote-cell"></td></tr>
