--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <tr><td>19</td><td>Рукавишникова В.</td><td class="vote-cell">+</td></tr>
                     <tr><td>20</td><td>Савельев Е.</td><td class="vote-cell">+</td></tr>
                     <tr><td>21</td><td>Соколов А.</td><td class="vote-cell">+</td></tr>
-                    <tr><td>22</td><td>Трушенков М.</td><td class="vote-cell"></td></tr>
+                    <tr><td>22</td><td>Трушенков М.</td><td class="vote-cell">+</td></tr>
                     <tr><td>23</td><td>Фадина Л.</td><td class="vote-cell"></td></tr>
                     <tr><td>24</td><td>Шмырёва А.</td><td class="vote-cell">+</td></tr>
                     <tr><td>25</td><td>Шмырёва К.</td><td class="vote-cell">+</td></tr>
