--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <tr><td>2</td><td>Белянин Д.</td><td class="vote-cell">+</td></tr>
                     <tr><td>3</td><td>Бондина К.</td><td class="vote-cell">+</td></tr>
                     <tr><td>4</td><td>Даданова А.</td><td class="vote-cell"></td></tr>
+                    <tr><td>4</td><td>Данилов Д.</td><td class="vote-cell"></td></tr>
                     <tr><td>5</td><td>Захарова И.</td><td class="vote-cell"></td></tr>
                     <tr><td>6</td><td>Зыкова Д.</td><td class="vote-cell"></td></tr>
                     <tr><td>7</td><td>Катанов Л.</td><td class="vote-cell">+</td></tr>
